# Note-Transcription

./: README.md  exploratory.ipynb  exploratory_to_obsidian.ipynb  pyproject.toml
src/: config.py  file_utils.py  gemini_client.py  main.py  objects.py  to_obsidian.py  transcription.py  transcription_prompts.py
